<resources>
    <string name="app_name">Gratitude</string>

    <!-- Menu Header -->
    <string name="guest_name">Guest Name</string>
    <string name="guest_email">guestemail@email.com</string>

    <!-- Search -->
    <string name="search_title">Search</string>
    <string name="search_hint">Search project&#8230;</string>
    <!-- Menu -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="menu_home">Featured</string>
    <string name="menu_cat">Themes</string>
    <string name="menu_org">Organizations</string>
    <string name="menu_prj">Projects</string>
    <string name="menu_fav">Favorites</string>
    <string name="menu_about">Info</string>
    <string name="menu_support">Support</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>

    <!-- Menu Bottom Navigation View-->
    <string name="menu_detail_about">About</string>
    <string name="menu_detail_themes">Themes</string>
    <string name="menu_detail_prj">Projects</string>

    <!-- Login -->
    <string name="btn_login">login</string>
    <string name="btn_skip">skip</string>
    <string name="login_powered">Powered by</string>

    <!-- Project CardView -->
    <string name="project_image_contentDescritpion">Project Image</string>
    <string name="project_share_contentDescritpion">Share</string>
    <string name="project_favorite_contentDescritpion">Favorite</string>
    <string name="project_report_contentDescritpion">Report</string>
    <string name="money_raised_text"><![CDATA[<font color="#3C8787">$%1$s</font> raised of <font color="#3C8787">$%2$s</font> goal]]></string>
    <string name="money_raised_text_tool">$236,557 raised of $300,000 goal</string>
    <string name="share_to">To share with:</string>

    <!-- Org CardView -->
    <string name="project_active_text"><![CDATA[active project: <b>%1$s</b>]]></string>
    <string name="project_active_text_tool">active project: 8</string>
    <string name="org_img_contentDescritpion">Logo Organization</string>

    <!-- Org Detail About -->
    <string name="org_detail_total_prj_text"><![CDATA[Total project: <b>%1$s</b>]]></string>
    <string name="org_detail_total_prj_text_tool">Total project: 8</string>
    <string name="org_detail_active_prj_text"><![CDATA[Active project: <b>%1$s</b>]]></string>
    <string name="org_detail_active_prj_text_tool">Active project: 8</string>
    <string name="org_detail_no_url_provided">No URL provided</string>

    <!-- Detail Project -->
    <string name="prj_detail_need">Need</string>
    <string name="prj_detail_summary">Summary</string>
    <string name="prj_detail_activities">Activities</string>
    <string name="prj_detail_longterm">Long term impact</string>
    <string name="label_fav_added">Project added to favorites</string>
    <string name="label_fav_deleted">Project removed from favorites</string>

    <!-- Favorites Project -->
    <string name="no_report">Ops, there is no update from this project yet!</string>
    <string name="no_fav">Ops, tap on heart to save your favorite project!</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <!-- Report Project -->
    <string name="report_img_contentDescritpion">Image Report</string>

    <!-- Widget -->
    <string name="widget_img_contentDescritpion">Widget Image</string>

    <!-- Support Me -->
    <string name="donate_title">Support me</string>
    <string name="donate_desc">Here you can send me a donation if you want to.</string>
    <string name="donate_new">Thank you for your support! &lt;3</string>
    <string name="donate_history">Thank you for your support!</string>

    <!-- InfoAbout -->
    <string name="attributions_text">Attributions</string>

</resources>
