<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:icon="@android:drawable/ic_media_play"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/menu_cat"
            android:icon="@android:drawable/ic_media_play"
            android:title="@string/menu_cat" />
        <item
            android:id="@+id/menu_org"
            android:icon="@android:drawable/ic_media_play"
            android:title="@string/menu_org" />
        <item
            android:id="@+id/menu_prj"
            android:icon="@android:drawable/ic_media_play"
            android:title="@string/menu_prj" />
    </group>
    <item android:title="">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_about"
                    android:icon="@drawable/ic_info"
                    android:title="@string/menu_about" />
                <item
                    android:id="@+id/menu_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/menu_settings" />
            </group>
        </menu>
    </item>
</menu>