<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_main">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/make_login"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="@dimen/btn_width"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/btn_login" />


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/skip_login"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="@dimen/btn_width"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/make_login"
            tools:text="@string/btn_skip" />

        <ImageView
            android:id="@+id/img_gratitude"
            android:layout_width="@dimen/login_gratitude_width"
            android:layout_height="@dimen/login_gratitude_height"
            android:layout_marginEnd="@dimen/general_margin_8dp"
            android:layout_marginStart="@dimen/general_margin_8dp"
            android:layout_marginTop="@dimen/general_margin_16dp"
            android:padding="@dimen/general_padding_8dp"
            android:src="@drawable/gratitude"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_powered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/general_margin_8dp"
            android:layout_marginStart="@dimen/general_margin_8dp"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/img_global"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/login_powered" />

        <ImageView
            android:id="@+id/img_global"
            android:layout_width="@dimen/login_global_width"
            android:layout_height="@dimen/login_global_height"
            android:layout_marginBottom="@dimen/general_margin_8dp"
            android:layout_marginEnd="@dimen/general_margin_8dp"
            android:layout_marginStart="@dimen/general_margin_8dp"
            android:padding="@dimen/general_padding_8dp"
            android:src="@drawable/global_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>
</layout>